--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,8 @@
 .navbar {
   padding-left: 130px;
 }
-.top {
+.top,
+.background {
   background: rgb(255, 255, 255);
   background: linear-gradient(0deg, rgba(255, 255, 255, 1) 0%, #f9ebc8 50%);
 }
@@ -35,6 +36,7 @@ p {
   margin: 30px 10px;
   background-color: var(--text-color);
 }
+
 .btn-primary {
   border: none;
 }
@@ -49,6 +51,48 @@ p {
 .btn-outline-dark:hover {
   background-color: transparent;
   color: var(--text-color);
+}
+.about-section h1 {
+  font-size: 55px;
+}
+.about-section h2 {
+  font-size: 25px;
+}
+.about-section img {
+  border-radius: 20px;
+}
+.about-section a,
+.contact-box a {
+  padding: 15px 30px;
+  font-size: 18px;
+}
+.contact-box {
+  background-color: var(--secondary-color);
+  margin-top: 150px;
+  border-radius: 20px;
+}
+.contact-box {
+  padding: 20px 100px;
+}
+.contact-box h2 {
+  font-size: 50px;
+  line-height: 1;
+}
+footer a {
+  font-size: 20px;
+}
+.social-links a {
+  padding: 10px 15px;
+  margin: 5px 10px;
+  border-radius: 50%;
+  background-color: var(--secondary-color);
+}
+.social-links a:hover{
+  color: var(--secondary-color);
+  background-color: var(--text-color);
+}
+.end a{
+  font-size: 18px;
 }
 @media (max-width: 1000px) {
   h2,
@@ -66,6 +110,17 @@ p {
   }
   h2 {
     font-size: 28px;
+  }
+  .about-section p,
+  h1,
+  h2 {
+    text-align: center;
+  }
+  .about-section h1 {
+    font-size: 50px;
+  }
+  .contact-box h2 {
+    font-size: 30px;
   }
 }
 a {
